fix make a href links a darker green for better readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -107,7 +107,7 @@ main {
 }
 
 a {
-    color: lime;
+    color: rgb(0, 156, 0);
     text-decoration: none;
     /* cursor: pointer; */
 }
